# NOVAclone

./: CMakeLists.txt
OT/: BBC  BEqn.H  OT.cpp  UEqn.H  pBBC
TG/: pEqn.H  rhoBC  rhoEqn.H
app/: CMakeLists.txt
app/OT/: BEqn.H  OT.cpp
app/OT_Poisson/: OT.cpp  RKLoop.H  UEqn.H
app/TG/: TG.cpp  UEqn.H  pEqn.H  rhoEqn.H
app/TG_Piosson/: RKLoop.H  TG.cpp  UEqn.H  pEqn.H
app/cd/: cd.cpp
app/mhdjet/: BEqn.H  UEqn.H  mhdjet.cpp
app/shearLayer/: BEqn.H  TEqn.H  UEqn.H  hydrostaticP.H  layerAverage.H  pEqn.H  rhoEqn.H  shearLayer.cpp
app/shearLayerWC/: TEqn.H  UEqn.H  layerAverage.H  shearLayer.cpp
examples/OT/: mesh  pBC
examples/TG/: UBC  mesh
examples/mhdjet/: mesh  pBC
examples/shearLayer/: TBC  UBC  mesh  pBBC  pBC
findFFTMPI/: FindFFTMPI.cmake
findHEFFTE/: findHEFFTE.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/BC/: BC.h  BCenums.cpp  BCenums.h  dirichletBC.hxx  mpiBC.hxx  muiBC.hxx  neumannBC.hxx  periodicBC.hxx
src/Field/: Field.cpp  Field.h  Field.hxx  updateMUI.hxx
src/Mesh/: Mesh.cpp  Mesh.h
src/Time/: Time.cpp  Time.h
src/Tools/: Tools.cpp  Tools.h
src/Types/scalar/: scalar.cpp  scalar.h
src/Types/symmTensor/: symmTensor.cpp  symmTensor.h
src/Types/tensor/: tensor.cpp  tensor.h
src/Types/vector/: vector.cpp  vector.h
src/ex/curl/: curl.cpp  curl.h  curl.hxx
src/ex/div/: div.h  div.hxx
src/ex/grad/: grad.cpp  grad.h
src/ex/laplacian/: laplacian.h  laplacian.hxx
src/fd/ddt/: ddt.h  ddt.hxx
src/fd/div/: div.h  div.hxx
src/fd/fdMatrix/: fdMatrix.h  fdMatrix.hxx
src/fd/laplacian/: laplacian.h  laplacian.hxx
src/fdc/curl/: curl.h  curl.hxx
src/fdc/div/: div.h  div.hxx
src/fdc/grad/: grad.cpp  grad.h
src/fdc/laplacian/: laplacian.h  laplacian.hxx
src/im/fdMatrix/: fdMatrix.h  fdMatrix.hxx
src/im/laplacian/: laplacian.h  laplacian.hxx
src/pTraits/: pTraits.h
src/parallelCom/: parallelCom.cpp  parallelCom.h
src/poisson/: poisson.cpp  poisson.h
src/reuseTmp/: reuseTmp.h  reuseTmp.hxx
src/settings/: settings.cpp  settings.h
src/shapes/: box.cpp  box.h  shape.h
